--- a/GOT_scraper_test.ipynb
+++ b/GOT_scraper_test.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "heds = soup.find_all('div', class_='item__content item__content--thumb')"
+    "heds = soup.find_all('div', class_='sqekv3-4 lkUfND')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -58,72 +58,72 @@
      "output_type": "stream",
      "text": [
       "********************\n",
-      "Winterfell throws an emotional house party as Game Of Thrones prepares for battle\n",
-      "https://tv.avclub.com/winterfell-throws-an-emotional-house-party-as-game-of-t-1834215824\n",
+      "Everyone in Westeros stares into the distance at... something in these latest Thrones photos\n",
+      "https://news.avclub.com/everyone-in-westeros-stares-into-the-distance-at-som-1834624754\n",
       "********************\n",
-      "Sophie Turner had a downright filthy reaction to Arya's love life and it's pure poetry\n",
-      "https://news.avclub.com/sophie-turner-had-a-downright-filthy-reaction-to-aryas-1834220980\n",
+      "Game Of Thrones director blames CGI for Jon’s lackluster goodbye to Ghost\n",
+      "https://news.avclub.com/game-of-thrones-director-blames-cgi-for-jon-s-lackluste-1834611192\n",
       "********************\n",
-      "All the TV you should have watched this weekend\n",
-      "https://tv.avclub.com/all-the-tv-you-should-have-watched-this-weekend-1834216678\n",
+      "Jessica Chastain blasts Game Of Thrones: “Rape is not a tool to make a character stronger”\n",
+      "https://news.avclub.com/jessica-chastain-blasts-game-of-thrones-rape-is-not-a-1834581011\n",
       "********************\n",
-      "Podrick’s song on last night's Game Of Thrones is riddled with Westerosi lore\n",
-      "https://news.avclub.com/podrick-s-song-on-last-nights-game-of-thrones-is-riddle-1834215430\n",
+      "When you play the games of the Game Of Thrones, do they win, or do they die?\n",
+      "https://games.avclub.com/when-you-play-the-games-of-the-game-of-thrones-do-they-1834465679\n",
       "********************\n",
-      "It took 69 episodes, but Game Of Thrones' horniness actually meant something last night\n",
-      "https://news.avclub.com/it-took-69-episodes-but-game-of-thrones-horniness-actu-1834213090\n",
+      "Game Of Thrones sets the table for its final conflict, but forgets to clear the coffee cup\n",
+      "https://tv.avclub.com/game-of-thrones-sets-the-table-for-its-final-conflict-1834566611\n",
       "********************\n",
-      "Travis Scott, SZA, and The Weeknd are still teasing cool Game Of Thrones stuff\n",
-      "https://news.avclub.com/travis-scott-sza-and-the-weeknd-are-still-teasing-coo-1834200498\n",
+      "Cersei Lannister as a Billie Eilish song is scary good\n",
+      "https://news.avclub.com/cersei-lannister-as-a-billie-eilish-song-is-scary-good-1834563117\n",
       "********************\n",
-      "\"Game Of (Leslie) Jones\" is how we should all be watching Game Of Thrones\n",
-      "https://news.avclub.com/game-of-leslie-jones-is-how-we-should-all-be-watching-1834166668\n",
+      "Your guide to who died this week on Game Of Thrones\n",
+      "https://www.avclub.com/your-guide-to-who-died-this-week-on-game-of-thrones-1834559890\n",
       "********************\n",
-      "Is anyone going to die on Game Of Thrones this week?\n",
-      "https://tv.avclub.com/is-anyone-going-to-die-on-game-of-thrones-this-week-1834082855\n",
+      "Jon Snow, supposed hero of Game Of Thrones, is a bad wolf dad\n",
+      "https://news.avclub.com/jon-snow-supposed-hero-of-game-of-thrones-is-a-bad-wo-1834551118\n",
       "********************\n",
-      "Sorry, Greyjoys: Game Of Thrones is still the piracy king\n",
-      "https://news.avclub.com/sorry-greyjoys-game-of-thrones-is-still-the-piracy-ki-1834158040\n",
+      "It’s canon now: Westeros has a Starbucks\n",
+      "https://news.avclub.com/its-canon-now-westeros-has-a-starbucks-1834551746\n",
       "********************\n",
-      "HBO grits its teeth, responds to Trump's latest use of Game Of Thrones imagery\n",
-      "https://news.avclub.com/hbo-grits-its-teeth-responds-to-trumps-latest-use-of-g-1834153764\n",
+      "Relationships fracture as the last war begins in Game Of Thrones (experts)\n",
+      "https://tv.avclub.com/game-of-thrones-s08e04-experts-1834540078\n",
       "********************\n",
-      "Westworld and Game Of Thrones take a trip to Sesame Street, learn how to be better friends\n",
-      "https://news.avclub.com/westworld-and-game-of-thrones-take-a-trip-to-sesame-str-1834142652\n",
+      "Game Of Thrones is just leaking like a sieve these days\n",
+      "https://news.avclub.com/game-of-thrones-is-just-leaking-like-a-sieve-these-days-1834537497\n",
       "********************\n",
-      "What will Lyanna Mormont miss most from Game Of Thrones? Shaming grown men, of course\n",
-      "https://news.avclub.com/what-will-lyanna-mormont-miss-most-from-game-of-thrones-1834138739\n",
+      "George R.R. Martin wants you to remember that there are more Game Of Thrones spin-offs in the works\n",
+      "https://news.avclub.com/george-r-r-martin-wants-you-to-remember-that-there-are-1834536201\n",
       "********************\n",
-      "Melisandre’s return, “Where the fuck is Ghost?,” and other burning Game Of Thrones questions\n",
-      "https://www.avclub.com/melisandre-s-return-where-the-fuck-is-ghost-and-ot-1834097802\n",
+      "Syrio Forel has no time for your crappy pro-capitalist memes, thanks\n",
+      "https://news.avclub.com/syrio-forel-has-no-time-for-your-crappy-pro-capitalist-1834516971\n",
       "********************\n",
-      "Hodor returns to man the Game Of Thrones emergency hotline\n",
-      "https://news.avclub.com/hodor-returns-to-man-the-game-of-thrones-emergency-hotl-1834084004\n",
+      "Barry, not Game Of Thrones or Endgame, gave us last weekend’s best fight\n",
+      "https://news.avclub.com/barry-not-game-of-thrones-or-endgame-gave-us-last-wee-1834506394\n",
       "********************\n",
-      "Does Game Of Thrones even need Tyrion anymore?\n",
-      "https://news.avclub.com/does-game-of-thrones-even-need-tyrion-anymore-1834081469\n",
+      "Mailbag Of Thrones tackles prophesies, Melisandre’s track record, and questionable war tactics\n",
+      "https://tv.avclub.com/mailbag-of-thrones-tackles-prophesies-melisandre-s-tra-1834434302\n",
       "********************\n",
-      "Rob McElhenney, Martin Starr were brutally murdered in Game Of Thrones' premiere\n",
-      "https://news.avclub.com/rob-mcelhenney-martin-starr-were-brutally-murdered-in-1834077456\n",
+      "Emilia Clarke's friends aren't watching her train \"iguanas\" or whatever on Game Of Thrones\n",
+      "https://news.avclub.com/emilia-clarkes-friends-arent-watching-her-train-iguana-1834473195\n",
       "********************\n",
-      "How season 8’s premiere mirrors Game Of Thrones’ very first episode\n",
-      "https://tv.avclub.com/how-season-8-s-premiere-mirrors-game-of-thrones-very-f-1834062400\n",
+      "Drake offers up a Billboard Music Awards shout-out to one of the real heroes: Arya Stark\n",
+      "https://news.avclub.com/drake-offers-up-a-billboard-music-awards-shout-out-to-o-1834462975\n",
       "********************\n",
-      "It'll be a while before Westworld and Curb return to post-Game Of Thrones HBO\n",
-      "https://news.avclub.com/itll-be-a-while-before-westworld-and-curb-return-to-pos-1834061547\n",
+      "Let Beyoncé guide you through Arya's journey to last week's Game Of Thrones\n",
+      "https://news.avclub.com/let-beyonce-guide-you-down-aryas-long-road-to-last-week-1834443925\n",
       "********************\n",
-      "Rejoice, for Ed Sheeran's Game Of Thrones character was apparently maimed by dragons\n",
-      "https://news.avclub.com/rejoice-for-ed-sheerans-game-of-thrones-character-was-1834058260\n",
+      "The Night King lives...on Cameo\n",
+      "https://news.avclub.com/the-night-king-lives-on-cameo-1834429619\n",
       "********************\n",
-      "Even the people who make Game Of Thrones' title sequences are scared of spoilers\n",
-      "https://news.avclub.com/even-the-people-who-make-game-of-thrones-title-sequence-1834048716\n"
+      "Does Endgame mark a decisive win for “content” over “cinema”?\n",
+      "https://news.avclub.com/does-endgame-mark-a-decisive-win-for-content-over-ci-1834417877\n"
      ]
     }
    ],
    "source": [
     "for x in range(len(heds)):\n",
-    "    hed = heds[x].h1.div.text\n",
-    "    href = heds[x].h1.a['href']\n",
+    "    hed = heds[x].h1.text\n",
+    "    href = heds[x].a['href']\n",
     "    print('*'*20)\n",
     "    print(hed)\n",
     "    print(href)"
