update class after local site change

--- a/GOT_scraper_test.ipynb
+++ b/GOT_scraper_test.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heds = soup.find_all('div', class_='sqekv3-4 lkUfND')"
+    "heds = soup.find_all('div', class_='cw4lnv-5 jbXSRk')"
    ]
   },
   {
@@ -58,65 +58,65 @@
      "output_type": "stream",
      "text": [
       "********************\n",
-      "Everyone in Westeros stares into the distance at... something in these latest Thrones photos\n",
-      "https://news.avclub.com/everyone-in-westeros-stares-into-the-distance-at-som-1834624754\n",
+      "For better or worse, George R.R. Martin says the end of Game Of Thrones isn't influencing his books\n",
+      "https://news.avclub.com/for-better-or-worse-george-r-r-martin-says-the-end-of-1837349082\n",
       "********************\n",
-      "Game Of Thrones director blames CGI for Jon’s lackluster goodbye to Ghost\n",
-      "https://news.avclub.com/game-of-thrones-director-blames-cgi-for-jon-s-lackluste-1834611192\n",
+      "The script for the Game Of Thrones finale is somehow worse than the episode\n",
+      "https://news.avclub.com/the-script-for-the-game-of-thrones-finale-is-somehow-wo-1836889900\n",
       "********************\n",
-      "Jessica Chastain blasts Game Of Thrones: “Rape is not a tool to make a character stronger”\n",
-      "https://news.avclub.com/jessica-chastain-blasts-game-of-thrones-rape-is-not-a-1834581011\n",
+      "Since the creators won't, Seth Rogen is here to answer your Game of Thrones questions\n",
+      "https://news.avclub.com/since-the-creators-wont-seth-rogen-is-here-to-answer-y-1836666355\n",
       "********************\n",
-      "When you play the games of the Game Of Thrones, do they win, or do they die?\n",
-      "https://games.avclub.com/when-you-play-the-games-of-the-game-of-thrones-do-they-1834465679\n",
+      "It's official: Filming has wrapped on the pilot for the Game Of Thrones prequel\n",
+      "https://news.avclub.com/its-official-filming-has-wrapped-on-the-pilot-for-the-1836674762\n",
       "********************\n",
-      "Game Of Thrones sets the table for its final conflict, but forgets to clear the coffee cup\n",
-      "https://tv.avclub.com/game-of-thrones-sets-the-table-for-its-final-conflict-1834566611\n",
+      "HBO didn't help Gwendoline Christie get her Emmy nomination, so she just did it herself\n",
+      "https://news.avclub.com/hbo-didnt-help-gwendoline-christie-get-her-emmy-nominat-1836504368\n",
       "********************\n",
-      "Cersei Lannister as a Billie Eilish song is scary good\n",
-      "https://news.avclub.com/cersei-lannister-as-a-billie-eilish-song-is-scary-good-1834563117\n",
+      "On second thought, maybe the Game Of Thrones showrunners won't be at Comic-Con this week\n",
+      "https://news.avclub.com/on-second-thought-maybe-the-game-of-thrones-showrunner-1836472966\n",
       "********************\n",
-      "Your guide to who died this week on Game Of Thrones\n",
-      "https://www.avclub.com/your-guide-to-who-died-this-week-on-game-of-thrones-1834559890\n",
+      "What did the Emmy nominations get right this year?\n",
+      "https://tv.avclub.com/what-did-the-emmy-nominations-get-right-this-year-1836420607\n",
       "********************\n",
-      "Jon Snow, supposed hero of Game Of Thrones, is a bad wolf dad\n",
-      "https://news.avclub.com/jon-snow-supposed-hero-of-game-of-thrones-is-a-bad-wo-1834551118\n",
+      "George R.R. Martin has new Game Of Thrones prequel details, if anyone cares\n",
+      "https://news.avclub.com/george-r-r-martin-has-new-game-of-thrones-prequel-deta-1836213306\n",
       "********************\n",
-      "It’s canon now: Westeros has a Starbucks\n",
-      "https://news.avclub.com/its-canon-now-westeros-has-a-starbucks-1834551746\n",
+      "Game Of Thrones showrunners now synonymous with \"bad writers\" on Google\n",
+      "https://news.avclub.com/game-of-thrones-showrunners-now-synonymous-with-bad-wr-1836151208\n",
       "********************\n",
-      "Relationships fracture as the last war begins in Game Of Thrones (experts)\n",
-      "https://tv.avclub.com/game-of-thrones-s08e04-experts-1834540078\n",
+      "On The Late Show, Naomi Watts shows off her scream queen pipes, stays mum on the Game Of Thrones prequel\n",
+      "https://news.avclub.com/on-the-late-show-naomi-watts-shows-off-her-scream-quee-1835757680\n",
       "********************\n",
-      "Game Of Thrones is just leaking like a sieve these days\n",
-      "https://news.avclub.com/game-of-thrones-is-just-leaking-like-a-sieve-these-days-1834537497\n",
+      "There was a deleted Game of Thrones scene clarifying Cersei's pregnancy situation\n",
+      "https://news.avclub.com/there-was-a-deleted-game-of-thrones-scene-clarifying-ce-1835651994\n",
       "********************\n",
-      "George R.R. Martin wants you to remember that there are more Game Of Thrones spin-offs in the works\n",
-      "https://news.avclub.com/george-r-r-martin-wants-you-to-remember-that-there-are-1834536201\n",
+      "Game Of Thrones' Lena Headey just says it: \"I wanted a better death\"\n",
+      "https://news.avclub.com/game-of-thrones-lena-headey-just-says-it-i-wanted-a-b-1835579784\n",
       "********************\n",
-      "Syrio Forel has no time for your crappy pro-capitalist memes, thanks\n",
-      "https://news.avclub.com/syrio-forel-has-no-time-for-your-crappy-pro-capitalist-1834516971\n",
+      "Talented, morbid artist wraps up his 74-image catalogue of every Game Of Thrones death\n",
+      "https://news.avclub.com/talented-morbid-artist-wraps-up-his-74-image-catalogue-1835515151\n",
       "********************\n",
-      "Barry, not Game Of Thrones or Endgame, gave us last weekend’s best fight\n",
-      "https://news.avclub.com/barry-not-game-of-thrones-or-endgame-gave-us-last-wee-1834506394\n",
+      "Game Of Thrones' director Miguel Sapochnik talks getting \"visually policed\" by showrunners\n",
+      "https://news.avclub.com/game-of-thrones-director-miguel-sapochnik-talks-getting-1835515287\n",
       "********************\n",
-      "Mailbag Of Thrones tackles prophesies, Melisandre’s track record, and questionable war tactics\n",
-      "https://tv.avclub.com/mailbag-of-thrones-tackles-prophesies-melisandre-s-tra-1834434302\n",
+      "Endgame and Game Of Thrones were basically telling the same story, but only one nailed the ending\n",
+      "https://news.avclub.com/endgame-and-game-of-thrones-were-basically-telling-the-1835375630\n",
       "********************\n",
-      "Emilia Clarke's friends aren't watching her train \"iguanas\" or whatever on Game Of Thrones\n",
-      "https://news.avclub.com/emilia-clarkes-friends-arent-watching-her-train-iguana-1834473195\n",
+      "Game Of Thrones fans are helping Emilia Clarke and Kit Harington raise tons of money for charity\n",
+      "https://news.avclub.com/game-of-thrones-fans-are-helping-emilia-clarke-and-kit-1835326812\n",
       "********************\n",
-      "Drake offers up a Billboard Music Awards shout-out to one of the real heroes: Arya Stark\n",
-      "https://news.avclub.com/drake-offers-up-a-billboard-music-awards-shout-out-to-o-1834462975\n",
+      "Sophie Turner and Conan O'Brien play tequila slaps, which is just what it sounds like\n",
+      "https://news.avclub.com/sophie-turner-and-conan-obrien-play-tequila-slaps-whic-1835291255\n",
       "********************\n",
-      "Let Beyoncé guide you through Arya's journey to last week's Game Of Thrones\n",
-      "https://news.avclub.com/let-beyonce-guide-you-down-aryas-long-road-to-last-week-1834443925\n",
+      "Add Finn Jones to the list of Game Of Thrones actors who called the ending\n",
+      "https://news.avclub.com/add-finn-jones-to-the-list-of-game-of-thrones-actors-wh-1835151247\n",
       "********************\n",
-      "The Night King lives...on Cameo\n",
-      "https://news.avclub.com/the-night-king-lives-on-cameo-1834429619\n",
+      "We fully support Sophie Turner dressing Joe Jonas up as Sansa\n",
+      "https://news.avclub.com/we-fully-support-sophie-turner-dressing-joe-jonas-up-as-1835130595\n",
       "********************\n",
-      "Does Endgame mark a decisive win for “content” over “cinema”?\n",
-      "https://news.avclub.com/does-endgame-mark-a-decisive-win-for-content-over-ci-1834417877\n"
+      "An integral element of Game Of Thrones' big twist was on an \"Inside The Episode\" commentary\n",
+      "https://news.avclub.com/an-integral-element-of-game-of-thrones-big-twist-was-on-1835073527\n"
      ]
     }
    ],
