avclub out here changing tags from h1 to h2

--- a/GOT_scraper_test.ipynb
+++ b/GOT_scraper_test.ipynb
@@ -58,71 +58,71 @@
      "output_type": "stream",
      "text": [
       "********************\n",
-      "For better or worse, George R.R. Martin says the end of Game Of Thrones isn't influencing his books\n",
-      "https://news.avclub.com/for-better-or-worse-george-r-r-martin-says-the-end-of-1837349082\n",
+      "Here's a bunch of plot points some show called Game Of Thrones didn't wrap up\n",
+      "https://news.avclub.com/heres-a-bunch-of-plot-points-some-show-called-game-of-t-1842487628\n",
       "********************\n",
-      "The script for the Game Of Thrones finale is somehow worse than the episode\n",
-      "https://news.avclub.com/the-script-for-the-game-of-thrones-finale-is-somehow-wo-1836889900\n",
+      "Game Of Thrones writers return to TV…on Westworld\n",
+      "https://news.avclub.com/game-of-thrones-writers-return-to-tv-on-westworld-1842456253\n",
       "********************\n",
-      "Since the creators won't, Seth Rogen is here to answer your Game of Thrones questions\n",
-      "https://news.avclub.com/since-the-creators-wont-seth-rogen-is-here-to-answer-y-1836666355\n",
+      "Emilia Clarke thinks Jon Snow got off way too easy in the Game Of Thrones finale\n",
+      "https://news.avclub.com/emilia-clarke-thinks-jon-snow-got-off-way-too-easy-in-t-1842384486\n",
       "********************\n",
-      "It's official: Filming has wrapped on the pilot for the Game Of Thrones prequel\n",
-      "https://news.avclub.com/its-official-filming-has-wrapped-on-the-pilot-for-the-1836674762\n",
+      "Westworld isn’t the next Game Of Thrones, but it could be the anti-Game Of Thrones \n",
+      "https://tv.avclub.com/westworld-isn-t-the-next-game-of-thrones-but-it-could-1842100048\n",
       "********************\n",
-      "HBO didn't help Gwendoline Christie get her Emmy nomination, so she just did it herself\n",
-      "https://news.avclub.com/hbo-didnt-help-gwendoline-christie-get-her-emmy-nominat-1836504368\n",
+      "Joaquin Phoenix, Parasite, and Renée Zellweger win big at the SAG Awards\n",
+      "https://news.avclub.com/joaquin-phoenix-parasite-and-renee-zellweger-win-big-1841098593\n",
       "********************\n",
-      "On second thought, maybe the Game Of Thrones showrunners won't be at Comic-Con this week\n",
-      "https://news.avclub.com/on-second-thought-maybe-the-game-of-thrones-showrunner-1836472966\n",
+      "Game Of Thrones prequel House Of The Dragon coming to HBO in 2022\n",
+      "https://news.avclub.com/game-of-thrones-prequel-house-of-the-dragon-coming-to-h-1841028839\n",
       "********************\n",
-      "What did the Emmy nominations get right this year?\n",
-      "https://tv.avclub.com/what-did-the-emmy-nominations-get-right-this-year-1836420607\n",
+      "In 2019, Reddit mostly existed to dunk on and/or mourn Game Of Thrones\n",
+      "https://news.avclub.com/in-2019-reddit-mostly-existed-to-dunk-on-and-or-mourn-1840206278\n",
       "********************\n",
-      "George R.R. Martin has new Game Of Thrones prequel details, if anyone cares\n",
-      "https://news.avclub.com/george-r-r-martin-has-new-game-of-thrones-prequel-deta-1836213306\n",
+      "Your watch will never end if you win Game Of Thrones: The Complete Collection \n",
+      "https://www.avclub.com/your-watch-will-never-end-if-you-win-game-of-thrones-t-1840157760\n",
       "********************\n",
-      "Game Of Thrones showrunners now synonymous with \"bad writers\" on Google\n",
-      "https://news.avclub.com/game-of-thrones-showrunners-now-synonymous-with-bad-wr-1836151208\n",
+      "An alternate Game Of Thrones ending apparently exists, but save your online petitions for now\n",
+      "https://news.avclub.com/an-alternate-game-of-thrones-ending-apparently-exists-1839987417\n",
       "********************\n",
-      "On The Late Show, Naomi Watts shows off her scream queen pipes, stays mum on the Game Of Thrones prequel\n",
-      "https://news.avclub.com/on-the-late-show-naomi-watts-shows-off-her-scream-quee-1835757680\n",
+      "George R.R. Martin expresses condolences for the death of Jane Goldman's GoT spinoff\n",
+      "https://news.avclub.com/george-r-r-martin-expresses-condolences-for-the-death-1839514663\n",
       "********************\n",
-      "There was a deleted Game of Thrones scene clarifying Cersei's pregnancy situation\n",
-      "https://news.avclub.com/there-was-a-deleted-game-of-thrones-scene-clarifying-ce-1835651994\n",
+      "Emilia Clarke reveals Lord Varys' final scheme: Leaving that coffee cup out in Game Of Thrones\n",
+      "https://news.avclub.com/emilia-clarke-reveals-lord-varys-final-scheme-leaving-1839503853\n",
       "********************\n",
-      "Game Of Thrones' Lena Headey just says it: \"I wanted a better death\"\n",
-      "https://news.avclub.com/game-of-thrones-lena-headey-just-says-it-i-wanted-a-b-1835579784\n",
+      "Season 2 of Tom Clancy’s Jack Ryan is predictably explosive\n",
+      "https://tv.avclub.com/season-2-of-tom-clancy-s-jack-ryan-is-predictably-explo-1839230716\n",
       "********************\n",
-      "Talented, morbid artist wraps up his 74-image catalogue of every Game Of Thrones death\n",
-      "https://news.avclub.com/talented-morbid-artist-wraps-up-his-74-image-catalogue-1835515151\n",
+      "HBO drops Naomi Watts-led Game Of Thrones prequel\n",
+      "https://news.avclub.com/hbo-drops-naomi-watts-led-game-of-thrones-prequel-1839449876\n",
       "********************\n",
-      "Game Of Thrones' director Miguel Sapochnik talks getting \"visually policed\" by showrunners\n",
-      "https://news.avclub.com/game-of-thrones-director-miguel-sapochnik-talks-getting-1835515287\n",
+      "Based on this Benioff and Weiss panel, it must’ve been dumb luck that Game Of Thrones happened at all\n",
+      "https://news.avclub.com/based-on-this-benioff-and-weiss-panel-it-mustve-been-d-1839398581\n",
       "********************\n",
-      "Endgame and Game Of Thrones were basically telling the same story, but only one nailed the ending\n",
-      "https://news.avclub.com/endgame-and-game-of-thrones-were-basically-telling-the-1835375630\n",
+      "George R.R. Martin on having a book adapted for television: \"It can be...traumatic\"\n",
+      "https://news.avclub.com/george-r-r-martin-on-having-a-book-adapted-for-televis-1838786078\n",
       "********************\n",
-      "Game Of Thrones fans are helping Emilia Clarke and Kit Harington raise tons of money for charity\n",
-      "https://news.avclub.com/game-of-thrones-fans-are-helping-emilia-clarke-and-kit-1835326812\n",
+      "Carice van Houten on the Game Of Thrones finale: \"This is what life is. Some dumbo can become president.\"\n",
+      "https://news.avclub.com/carice-van-houten-on-the-game-of-thrones-finale-this-1838380715\n",
       "********************\n",
-      "Sophie Turner and Conan O'Brien play tequila slaps, which is just what it sounds like\n",
-      "https://news.avclub.com/sophie-turner-and-conan-obrien-play-tequila-slaps-whic-1835291255\n",
+      "Here are the winners from the 71st Primetime Emmy Awards\n",
+      "https://news.avclub.com/here-are-the-winners-from-the-71st-primetime-emmy-award-1838341509\n",
       "********************\n",
-      "Add Finn Jones to the list of Game Of Thrones actors who called the ending\n",
-      "https://news.avclub.com/add-finn-jones-to-the-list-of-game-of-thrones-actors-wh-1835151247\n",
+      "Taylor Swift gets in-depth about her feud with \"two-faced\" Kanye West, and also Game Of Thrones\n",
+      "https://news.avclub.com/taylor-swift-gets-in-depth-about-her-feud-with-two-fac-1838237275\n",
       "********************\n",
-      "We fully support Sophie Turner dressing Joe Jonas up as Sansa\n",
-      "https://news.avclub.com/we-fully-support-sophie-turner-dressing-joe-jonas-up-as-1835130595\n",
+      "HBO might be preparing to announce a second Game Of Thrones spin-off that's all about dragons\n",
+      "https://news.avclub.com/hbo-might-be-preparing-to-announce-a-second-game-of-thr-1838081299\n",
       "********************\n",
-      "An integral element of Game Of Thrones' big twist was on an \"Inside The Episode\" commentary\n",
-      "https://news.avclub.com/an-integral-element-of-game-of-thrones-big-twist-was-on-1835073527\n"
+      "Here's how Game Of Thrones destroyed King's Landing once and for all\n",
+      "https://news.avclub.com/heres-how-game-of-thrones-destroyed-kings-landing-once-1837721138\n"
      ]
     }
    ],
    "source": [
     "for x in range(len(heds)):\n",
-    "    hed = heds[x].h1.text\n",
+    "    hed = heds[x].h2.text\n",
     "    href = heds[x].a['href']\n",
     "    print('*'*20)\n",
     "    print(hed)\n",
